--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 
 .hero-bg {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./public/hero.jpg");
+    url("/hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
