--- a/client/src/index.css
+++ b/client/src/index.css
@@ -67,3 +67,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+.rad {
+  background-image: radial-gradient(
+    51.39% 511.66% at 47.68% -217.91%,
+    rgb(255, 153, 0) 0%,
+    rgb(229, 9, 20) 17.27%,
+    rgb(14, 27, 79) 79.44%,
+    rgb(0, 4, 19) 100%
+  );
+}
